# smart-home-ah-oh

./: .gitmodules  README.md
app/ahoh-plane/web1/: package-lock.json  package.json  vue.config.js
app/ahoh-plane/web1/backend/: package-lock.json  server.js  utils.js
app/ahoh-plane/web1/src/: App.vue  main.js
app/ahoh-plane/web1/src/api/: appApi.js  axiosFun.js  deviceAPI.js  productApi.js  protocolApi.js  ruleApi.js  spaceApi.js  statsApi.js  userApi.js
app/ahoh-plane/web1/src/components/: DeviceCard.vue
app/ahoh-plane/web1/src/router/: index.js
app/ahoh-plane/web1/src/views/: AddDevice.vue  DeleteDevice.vue  DeviceDetails.vue  EditDevice.vue  MainPage.vue  MapEditor.vue  MonitorDevice.vue  SettingsView.vue
backend/: docker-compose.yaml  mosquitto.conf  mqtt_fake_code.md  nginx.conf
backend/http-api/: CMakeLists.txt  dockerfile
backend/http-api/src/: main.cpp
hardware/legacy/hi3861/app/dht11_test/: BUILD.gn  dht11_test.c
hardware/legacy/hi3861/app/first_app/: hello_world.c
hardware/legacy/hi3861/app/gpio_test/: BUILD.gn  gpio_test.c
hardware/legacy/hi3861/app/ir_test/: BUILD.gn  ir_test.c
hardware/legacy/hi3861/app/oled_test/: BUILD.gn  oled_test.c  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h
hardware/legacy/hi3861/app/pwm_test/: BUILD.gn  pwm_test.c
web/: README.md
web/ahoh-plane/: README.md
服务外包222/: ac.html  index.html  light.html  manifest.json  tv.html
服务外包222/css/: ac-style.css  light-style.css  style.css  tv.css
服务外包222/js/: ac-script.js  light-script.js  script.js  tv.js
(+10 files in other folders)
